--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
+    "@animxyz/vue": "^0.3.0",
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/proxy": "^2.0.1",
     "core-js": "^3.6.5",
